update to Blazor 0.5

--- a/WebWinClient/wwwroot/index.html
+++ b/WebWinClient/wwwroot/index.html
@@ -10,9 +10,7 @@
 </head>
 <body>
     <app>Loading...</app>
-
-    <script type="blazor-boot">
-    </script>
+    <script src="_framework/blazor.webassembly.js"></script>
 </body>
 </html>
 <script src="scripts/terminal.js"></script>
