--- a/WebWinClient/wwwroot/index.html
+++ b/WebWinClient/wwwroot/index.html
@@ -11,6 +11,9 @@
 <body>
     <app>Loading...</app>
 
-    <script type="blazor-boot"></script>
+    <script type="blazor-boot">
+    </script>
 </body>
 </html>
+<script src="scripts/terminal.js"></script>
+<script src="scripts/storage.js"></script>
